--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port=8888
 server.tomcat.uri-encoding=UTF-8
 
+spring.datasource.url=jdbc:mysql://127.0.0.1/longer?useUnicode=true&characterEncoding=utf8&useSSL=false 
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+logging.config=src/main/resources/logback.xml
+
 spring.devtools.restart.enabled: true
